--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
