--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "firebase": "^10.8.0",
     "gsap": "^3.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
