--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_PROJECTID=vip-tailor-df383
 VITE_STORAGEBUCKET=vip-tailor-df383.appspot.com
 VITE_MESSAGINGSENDERID=448212700929
 VITE_APPID=1:448212700929:web:a97829a762d58f9e5f9500
+VITE_IMAGE_HOSITNG_KEY=5e5f042bf08c110ec323009ae192e58f
