--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
@@ -33,8 +35,8 @@
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.5",
-    "swiper": "^11.0.6"
+    "sweetalert2": "^11.10.6",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
