--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
