--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
