--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "match-sorter": "^6.3.3",
     "quill": "^1.3.7",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -52,6 +53,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.2.8"
   }
 }
